--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,7 +30,28 @@ jobs:
           npm run build
         working-directory: phonebook-frontend
 
-      - uses: sws2apps/render-deployment@v1.8.0
+      - name: Notify success
+        uses: rjstone/discord-webhook-notify@v2
+        if: success()
+        with:
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+          severity: info
+          details: A new version has been released
+          title: ${{ github.repository }}
+          description: ${{ github.event.head_commit.author.username }} - https://github.com/${{ github.repository }}/commit/${{ github.sha }}
+
+      - name: Notify failure
+        uses: rjstone/discord-webhook-notify@v2
+        if: failure()
+        with:
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+          severity: error
+          details: Build failed
+          title: ${{ github.repository }}
+          description: ${{ github.event.head_commit.author.username }} - https://github.com/${{ github.repository }}/commit/${{ github.sha }}
+
+      - name: Deploy app
+        uses: sws2apps/render-deployment@v1.8.0
         if: github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')
         with:
           serviceId: ${{ secrets.RENDER_SERVICE_ID }}
@@ -48,23 +69,3 @@ jobs:
         uses: anothrNick/github-tag-action@1.73.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Notify success
-        uses: rjstone/discord-webhook-notify@v2
-        if: success()
-        with:
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-          severity: info
-          details: A new version has been released!
-          username: ${{ github.event.head_commit.author.username }}
-          title: ${{ github.repository }}
-          description: ${{ github.sha }}(https://github.com/${{ github.repository }}/commit/${{ github.sha }})
-      - name: Notify failure
-        uses: rjstone/discord-webhook-notify@v2
-        if: failure()
-        with:
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-          severity: error
-          details: Build failed!
-          username: ${{ github.event.head_commit.author.username }}
-          title: ${{ github.repository }}
-          description: ${{ github.sha }}(https://github.com/${{ github.repository }}/commit/${{ github.sha }})
